2008-11-13	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* console/console.c: Update for new NS16550 polled write function.

2008-09-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* preinstall.am: Regenerated.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminates libcpudir.

2008-09-19	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* startup/bspstart.c: correct bsp_clicks_per_usec initialization
	for non-U-Boot case

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.h: Convert to "bool".

2008-09-05	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/bspstart.c: Derive time base clicks from bus frequency.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c: Convert to "bool".

2008-08-26	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>
	
	* include/hwreg_vals.h: added some settings for HSC_CM01
	* network/network.c: changed initialization code for HSC_CM01
	* startup/cpuinit.c: changed initialization code for HSC_CM01
	* startup/linkcmds.hsc_cm01: adapted memory map to HSC_CM01

2008-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Added bspclean.c and use shared bsppretaskinghook.c.
	* console/console.c: Added poll for char helper.
	* include/bsp.h: Add macro definitions for optional reset behavior.
	* startup/bspstart.c: Split out bsp_cleanup(). Clean up.
	* startup/bspclean.c: New file.  Not can press any key on normal
	shutdown to reset board when on MPC8313erdb.

2008-08-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/cpuinit.h: Uses now powerpc-utility.h.  Changed invalid usage
	of a boolean type to a proper integer type in calc_dbat_regvals().
	Througout code formatting.

2008-08-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/tm27.h: Uses now a decrementer exception handler.  Replaces
	previous file.
	* startup/bspstart.c: Install a default decrementer exception handler.
